<resources>
    <string name="app_name">UpTask</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_continue_using_the_app">Sign in to continue using the app</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="google_icon">Google Icon</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_personal_information">Enter your personal information</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="arrow_back_icon">Arrow Back Icon</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_the_email_linked_with_your_account">Enter the email linked with your account.</string>
    <string name="submit">SUBMIT</string>
    <string name="user_icon">User Icon</string>
    <string name="hi">Hi,</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="today_s_progress">Today\'s progress</string>
    <string name="add_icon">Add Icon</string>
    <string name="create_new_task">Create New Task</string>
    <string name="task_name">Task Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create_task">CREATE TASK</string>
    <string name="no_tasks">No Tasks</string>
</resources>