<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTaskActivity">

    <ImageButton
        android:id="@+id/btnBackNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_back_icon"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/etTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:autofillHints="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/etTextTaskDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="date"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/etTextTaskTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="time"
        android:inputType="time"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

</LinearLayout>