<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/tvWelcomeBackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="28sp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignInMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue_using_the_app"
        android:textColor="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBackText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvSignInMessageText"
        app:layout_constraintStart_toStartOf="@+id/tvSignInMessageText"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInMessageText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextEmailAddressSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawableTint="?attr/colorPrimary"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawableTint="?attr/colorPrimary"
            android:hint="@string/enter_your_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


    <Button
        android:id="@+id/btnSignInSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/tvOrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignInSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignInSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInSignIn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvOrText"
        app:layout_constraintStart_toStartOf="@+id/tvOrText"
        app:layout_constraintTop_toBottomOf="@+id/tvOrText">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/google_icon"
            android:padding="10dp"
            app:srcCompat="@drawable/icon_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/continue_with_google" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHaveAccountMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSignUpSignIn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignUpSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toEndOf="@id/tvHaveAccountMessageText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        android:background="?attr/colorPrimary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>