<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity">

    <ImageButton
        android:id="@+id/btnBackForgotPass"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:contentDescription="@string/arrow_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tvResetPassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="28sp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPassMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_email_linked_with_your_account"
        android:textColor="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvForgotPassMessageText"
        app:layout_constraintStart_toStartOf="@+id/tvForgotPassMessageText"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassMessageText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextEmailAddressForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawableTint="?attr/colorPrimary"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmitForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>